[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "krackn"
version = "0.1.0"
description = "AI-powered development assistant with FreeLoder technology"
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE"}
authors = [
    {name = "Krackn Team", email = "support@krackn.ai"}
]
keywords = ["ai", "development", "assistant", "code-generation"]

classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: X11 Applications :: Qt",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Editors :: Integrated Development Environments (IDE)"
]

dependencies = [
    "PyQt6>=6.4.0",
    "PyQt6-QScintilla>=2.13.3",
    "aiohttp>=3.8.0",
    "pyyaml>=6.0",
    "GitPython>=3.1.0",
    "cryptography>=3.4.0",
    "toml>=0.10.2",
    "rich>=12.0.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=6.2.5",
    "twine>=3.4.2",
    "build>=0.7.0"
]

[project.scripts]
krackn = "krackn.app:main"

[project.urls]
"Bug Tracker" = "https://github.com/krackn88/krackn/issues"
"Source Code" = "https://github.com/krackn88/krackn"
"Documentation" = "https://github.com/krackn88/krackn/blob/main/README.md"

[tool.setuptools]
packages = ["krackn"]

[tool.setuptools.package-data]
krackn = ["config/*.yaml", "resources/*"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests"
]

[tool.build]
wheel = true
sdist = true
